--- a/CzTravel_Client/res/values/dimens.xml
+++ b/CzTravel_Client/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="slidingmenu_offset">80dp</dimen>
+    <dimen name="shadow_width">15dp</dimen>
 </resources>
